--- a/XmasAppCodePro/Platforms/iOS/Info.plist
+++ b/XmasAppCodePro/Platforms/iOS/Info.plist
@@ -28,5 +28,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleIdentifier</key>
+	<string>it.lconolasco.xmasappcodepro</string>
 </dict>
 </plist>
